--- a/playbook.yml
+++ b/playbook.yml
@@ -1,6 +1,15 @@
-- name: Nginx Installation
+- name: Install and Start Nginx
   hosts: web
   become: yes
-  roles:
-    - nginx
+  tasks:
+    - name: Install Nginx
+      apt:
+        name: nginx
+        state: present
+        update_cache: yes
 
+    - name: Start Nginx
+      service:
+        name: nginx
+        state: started
+        enabled: true
