--- a/playbook.yml
+++ b/playbook.yml
@@ -1,24 +1,34 @@
-- name: Deploy Full Nginx Website
+- name: Build & Deploy Dockerized Static Website
   hosts: web
-  become: yes
+  gather_facts: false
+  remote_user: root
 
   tasks:
-    - name: Install Nginx
+    - name: Ensure Docker is installed
       apt:
-        name: nginx
+        name: docker.io
         state: present
         update_cache: yes
 
-    - name: Ensure Nginx is running
-      service:
-        name: nginx
-        state: started
-        enabled: true
+    - name: Copy app files to remote server
+      synchronize:
+        src: ./app/
+        dest: /root/project/
+        recursive: yes
 
-    - name: Copy website files to /var/www/html
-      copy:
-        src: files/
-        dest: /var/www/html/
-        owner: www-data
-        group: www-data
-        mode: '0755'
+    - name: Build Docker Image
+      community.docker.docker_image:
+        name: mico
+        tag: latest
+        build:
+          path: /root/project
+        state: present
+
+    - name: Run Docker Container
+      community.docker.docker_container:
+        name: mico-container
+        image: mico:latest
+        ports:
+          - "80:80"
+        state: started
+        restart_policy: always
